Fix overflow for file name

--- a/client/styles/_settings.scss
+++ b/client/styles/_settings.scss
@@ -26,3 +26,9 @@
     outline: none;
   }
 }
+
+#settings__file-name {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
